--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                       <div class="u-form-agree u-form-group u-form-group-6">
                         <input type="checkbox" id="agree-1011" name="agree" class="u-agree-checkbox" required="">
                         <label for="agree-1011" class="u-label u-label-6">I have read and agree to the&nbsp;Terms of Service&nbsp;and your&nbsp;<br>
-                          <a target="_blank" href="https://www.salesforce.com/company/privacy/" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">Privacy Policy.</a>
+                          <a target="_blank" href="https://www.omerva.tn" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">Privacy Policy.</a>
                           <br>
                           <br>
                         </label>
